--- a/templates/edit_newscaster.html
+++ b/templates/edit_newscaster.html
@@ -62,6 +62,26 @@
                     <input type="text" id="voice" name="voice" value="{{ newscaster.voice }}" required
                            class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black">
                 </div>
+                <div class="mb-4">
+                  <label for="sftp_host" class="block text-sm font-medium text-gray-700">Sftp Host:</label>
+                  <input type="text" id="sftp_host" name="sftp_host" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_host }}" required>
+              </div>
+              <div class="mb-4">
+                <label for="sftp_port" class="block text-sm font-medium text-gray-700">Sftp Port:</label>
+                <input type="text" id="sftp_port" name="sftp_port" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_port }}" required>
+            </div>
+            <div class="mb-4">
+              <label for="sftp_username" class="block text-sm font-medium text-gray-700">Sftp Username:</label>
+              <input type="text" id="sftp_username" name="sftp_username" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_username }}" required>
+          </div>
+          <div class="mb-4">
+            <label for="sftp_password" class="block text-sm font-medium text-gray-700">Sftp Password:</label>
+            <input type="text" id="sftp_password" name="sftp_password" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_password }}" required>
+        </div>
+        <div class="mb-4">
+          <label for="sftp_remote_path" class="block text-sm font-medium text-gray-700">Sftp Reote Path:</label>
+          <input type="text" id="sftp_remote_path" name="sftp_remote_path" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_remote_path }}" required>
+      </div>
     
                 <button type="submit"
                         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline-blue">
