--- a/templates/index.html
+++ b/templates/index.html
@@ -264,6 +264,8 @@
                         name="sftp_host"
                         required
                         class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                        value="{{ sftp_host }}"
+                        
                       />
                     </div>
                   </div>
@@ -277,6 +279,7 @@
                         name="sftp_port"
                         required
                         class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                        value="{{ sftp_port }}"
                       />
                     </div>
                   </div>
@@ -290,6 +293,7 @@
                         name="sftp_username"
                         required
                         class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                        value="{{ sftp_username }}"
                       />
                     </div>
                   </div>
@@ -303,6 +307,7 @@
                         name="sftp_password"
                         required
                         class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                        value="{{ sftp_password }}"
                       />
                     </div>
                   </div>
@@ -316,6 +321,7 @@
                         name="sftp_remote_path"
                         required
                         class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                        value="{{ sftp_remote_path }}"
                       />
                     </div>
                   </div>
