--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -148,6 +148,7 @@
                   name="sftp_host"
                   required
                   class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                  value="{{ sftp_host }}"
                 />
               </div>
 
@@ -163,6 +164,7 @@
                   name="sftp_port"
                   required
                   class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                  value="{{ sftp_port }}"
                 />
               </div>
 
@@ -178,6 +180,7 @@
                   name="sftp_username"
                   required
                   class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                  value="{{ sftp_username }}"
                 />
               </div>
 
@@ -193,6 +196,7 @@
                   name="sftp_password"
                   required
                   class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                  value="{{ sftp_password }}"
                 />
               </div>
 
@@ -208,6 +212,7 @@
                   name="sftp_remote_path"
                   required
                   class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                  value="{{ sftp_remote_path }}"
                 />
               </div>
             </div>
