--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,215 +1,163 @@
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website</title>
+    <!-- Add your CSS link or inline styles here -->
+    <link rel="stylesheet" href="{% static 'your-styles.css' %}">
+</head>
+
 <body>
-<header class="absolute inset-x-0 top-0 z-50">
-    <nav
-      class="flex items-center justify-between p-6 lg:px-8"
-      aria-label="Global"
-    >
-      <div class="flex lg:flex-1 dark-mode">
-        <a href="/Newscasters" class="-m-1.5 p-1.5">
-          <span class="sr-only">Groundrushlabs</span>
-          {% comment %} <img
-            class="h-8 w-auto bg-white"
-            src="https://github.com/PragmaCodeRepo/Images/blob/main/Groundrushlabs_logo.png?raw=true"
-            alt="pranjal"
-          /> {% endcomment %}
-          
-          <img
-            class="h-8 w-auto bg-white"
-            src="{% static 'images\Groundrushlabs_logo.png' %}"
-            alt="groundrushlabs-logo"
-          />
-        </a>
-      </div>
-      <div class="flex lg:hidden">
-        <button
-          type="button"
-          class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-black-700"
-        >
-          <span class="sr-only">Open main menu</span>
-          <svg
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-            />
-          </svg>
-        </button>
-      </div>
-      
-      <div class="hidden lg:flex lg:gap-x-12">
-        {% comment %} <a
-          href="/weather"
-          class="text-sm font-semibold leading-6 text-black-900"
-          >Weather</a
-        > {% endcomment %}
-        <div class="relative inline-block text-left ">
-          <div>
-              <button type="button" id="dropdown-button" class="inline-flex justify-center w-full px-4 py-2 text-sm font-medium text-white bg-black border border-black-300 rounded-md shadow-sm hover:bg-black-50 focus:outline-none focus:ring focus:border-blue-300 focus:z-10">
-                  Scheduling Tasks
-                  <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                      <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 11.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-                  </svg>
-              </button>
-          </div>
-      
-          <div id="dropdown-menu" class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-black ring-1 ring-black ring-opacity-5 bg-black ">
-              <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu class="bg-black">
-                  <a href="/scheduling_news_task/" class="block px-4 py-2 text-sm text-black-900 hover:bg-gray-100" role="menuitem">Scheduling-Tasks-News</a>
-                  <a href="/scheduling_weather_task/" class="block px-4 py-2 text-sm text-black-900 hover:bg-gray-100" role="menuitem">Scheduling-Tasks-Weather</a>
-                  {% comment %} <a href="/schedule_tasks/" class="block px-4 py-2 text-sm text-black-900 hover:bg-gray-100" role="menuitem">Schedule Tasks</a> {% endcomment %}
-              </div>
-          </div>
-      </div>
-        <div class="flex items-center justify-center mb-4">
-          <span class="text-green-500 pr-2">&#8592;</span> <!-- Left arrow emoji -->
-          <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Newscasters</a>
-      </div>
-      
-        
-      
-        <a
-          href="/contactus"
-          class="text-sm font-semibold leading-6 text-black-900"
-          >Contact us</a
-        >
-        <a
-          href="/aboutus"
-          class="text-sm font-semibold leading-6 text-black-900"
-          >About us</a
-        >
-        <a
-          href="/chatbot"
-          class="text-sm font-semibold leading-6 text-black-900"
-          >Chatbot</a
-        >
-        {% if user.is_authenticated %}
-        <p class="text-lg text-black-800">
-          Welcome,
-          <span class="text-blue-500 font-semibold"
-            >{{ user.username }}</span
-          >!
-        </p>
-        <a
-          href="/admin"
-          class="text-sm font-semibold leading-6 text-black-900"
-          >Admin Panel</a
-        >
-      </div>
-      <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
-
-      <a
-        href="{% url 'rss_to_audio_app:logout' %}"
-        class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600"
-        >Logout</a
-      >
-
-      {% else %}
-      <!-- Your login form here -->
-      {% endif %}
-    </nav>
-    <!-- Mobile menu, show/hide based on menu open state. -->
-    <div class="lg:hidden" role="dialog" aria-modal="true">
-      <!-- Background backdrop, show/hide based on slide-over state. -->
-      <div class="fixed inset-0 z-50"></div>
-      <div
-        class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
-      >
-        <div class="flex items-center justify-between dark-mode">
-          <a href="#" class="-m-1.5 p-1.5">
-            <span class="sr-only">Groundrush labs</span>
-            <img
-              class="h-8 w-auto"
-              src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-              alt=""
-            />
-          </a>
-          <button
-            type="button"
-            class="-m-2.5 rounded-md p-2.5 text-black-700"
-          >
-            <span class="sr-only">Close menu</span>
-            <svg
-              class="h-6 w-6"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              aria-hidden="true"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M6 18L18 6M6 6l12 12"
-              />
-            </svg>
-          </button>
-        </div>
-        <div class="mt-6 flow-root">
-          <div class="-my-6 divide-y divide-gray-500/10">
-            <div class="space-y-2 py-6">
-              <a
-                href="#"
-                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50"
-                >Product</a
-              >
-              <a
-                href="#"
-                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50"
-                >Features</a
-              >
-              <a
-                href="#"
-                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50"
-                >Marketplace</a
-              >
-              <a
-                href="#"
-                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50"
-                >Company</a
-              >
+    <header class="absolute inset-x-0 top-0 z-50">
+        <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+            <div class="flex lg:flex-1 dark-mode">
+                <a href="/Newscasters" class="-m-1.5 p-1.5">
+                    <span class="sr-only">Groundrushlabs</span>
+                    <img class="h-8 w-auto bg-white" src="{% static 'images\Groundrushlabs_logo.png' %}"
+                        alt="groundrushlabs-logo" />
+                </a>
             </div>
-            <div class="py-6">
-              <a
-                href="#"
-                class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50"
-                >Log in</a
-              >
+            <div class="flex lg:hidden">
+                <button type="button"
+                    class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-black-700">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                        aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                    </svg>
+                </button>
             </div>
-          </div>
+            <div class="hidden lg:flex lg:gap-x-12">
+                <div class="relative inline-block text-left ">
+                    <div>
+                        <button type="button" id="dropdown-button"
+                            class="inline-flex justify-center w-full px-4 py-2 text-sm font-medium text-white bg-black border border-black-300 rounded-md shadow-sm hover:bg-black-50 focus:outline-none focus:ring focus:border-blue-300 focus:z-10">
+                            Scheduling Tasks
+                            <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 11.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div id="dropdown-menu"
+                        class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-black ring-1 ring-black ring-opacity-5 bg-black">
+                        <div class="py-1" role="menu" aria-orientation="vertical"
+                            aria-labelledby="options-menu class=" bg-black">
+                            <a href="/scheduling_news_task/"
+                                class="block px-4 py-2 text-sm text-black-900 hover:bg-gray-100"
+                                role="menuitem">Scheduling-Tasks-News</a>
+                            <a href="/scheduling_weather_task/"
+                                class="block px-4 py-2 text-sm text-black-900 hover:bg-gray-100"
+                                role="menuitem">Scheduling-Tasks-Weather</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex items-center justify-center mb-4">
+                    <span class="text-green-500 pr-2">&#8592;</span> <!-- Left arrow emoji -->
+                    <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Newscasters</a>
+                </div>
+
+                <a href="/contactus" class="text-sm font-semibold leading-6 text-black-900">Contact us</a>
+                <a href="/aboutus" class="text-sm font-semibold leading-6 text-black-900">About us</a>
+                <a href="/chatbot" class="text-sm font-semibold leading-6 text-black-900">Chatbot</a>
+                {% if user.is_authenticated %}
+                <p class="text-lg text-black-800">
+                    Welcome,
+                    <span class="text-blue-500 font-semibold">{{ user.username }}</span>!
+                </p>
+                <a href="/fetching-meta-data"
+                    class="text-sm font-semibold leading-6 text-black-900">Fetching meta data of songs</a>
+                <a href="/admin" class="text-sm font-semibold leading-6 text-black-900">Admin Panel</a>
+                <a href="{% url 'rss_to_audio_app:logout' %}"
+                    class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">Logout</a>
+                {% endif %}
+            </div>
+            <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
+        </nav>
+        <!-- Mobile menu, show/hide based on menu open state. -->
+        <div class="lg:hidden" role="dialog" aria-modal="true">
+            <!-- Background backdrop, show/hide based on slide-over state. -->
+            <div class="fixed inset-0 z-50"></div>
+            <div
+                class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+                <div class="flex items-center justify-between dark-mode">
+                    <a href="#" class="-m-1.5 p-1.5">
+                        <span class="sr-only">Groundrush labs</span>
+                        <img class="h-8 w-auto"
+                            src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="" />
+                    </a>
+                    <button type="button"
+                        class="-m-2.5 rounded-md p-2.5 text-black-700">
+                        <span class="sr-only">Close menu</span>
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="currentColor"
+                            aria-hidden="true">
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M6 18L18 6M6 6l12 12"
+                            />
+                        </svg>
+                    </button>
+                </div>
+                <div class="mt-6 flow-root">
+                    <div class="-my-6 divide-y divide-gray-500/10">
+                        <div class="space-y-2 py-6">
+                            <a href="/contactus"
+                                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50">contacus</a>
+                            <a href="/aboutus"
+                                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50">aboutus</a>
+                            <a href="/admin"
+                                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50">Admin Panel</a>
+                            <a href="/Newscasters"
+                                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-black-900 hover:bg-gray-50">Newscasters</a>
+                        </div>
+                        <div class="py-6">
+                          {% if user.is_authenticated %}
+                          <p class="text-lg text-red-800">
+                              Welcome,
+                              <span class="text-blue-500 font-semibold"> {{ user.username }}</span>!
+                          </p>
+                          {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-  </header>
-  <script>
-    // Update the current year dynamically
-    document.getElementById('currentYear').innerText = new Date().getFullYear();
-    function toggleScheduleText() {
-      var scheduleText = document.getElementById("schedule_text");
-      scheduleText.classList.toggle("hidden");
-  }
-  document.getElementById('dropdown-button').addEventListener('click', function () {
-    var menu = document.getElementById('dropdown-menu');
-    menu.classList.toggle('hidden');
-    menu.classList.toggle('block');
-});
-  document.addEventListener('click', function (event) {
-    var menu = document.getElementById('dropdown-menu');
-    var button = document.getElementById('dropdown-button');
+    </header>
+    <script>
+        // Update the current year dynamically
+        document.getElementById('currentYear').innerText = new Date().getFullYear();
 
-    if (!menu.contains(event.target) && !button.contains(event.target)) {
-        menu.classList.add('hidden');
-        menu.classList.remove('block');
-    }
-});
+        function toggleScheduleText() {
+            var scheduleText = document.getElementById("schedule_text");
+            scheduleText.classList.toggle("hidden");
+        }
 
-</script>
+        document.getElementById('dropdown-button').addEventListener('click', function () {
+            var menu = document.getElementById('dropdown-menu');
+            menu.classList.toggle('hidden');
+            menu.classList.toggle('block');
+        });
+
+        document.addEventListener('click', function (event) {
+            var menu = document.getElementById('dropdown-menu');
+            var button = document.getElementById('dropdown-button');
+
+            if (!menu.contains(event.target) && !button.contains(event.target)) {
+                menu.classList.add('hidden');
+                menu.classList.remove('block');
+            }
+        });
+
+    </script>
 </body>
+
+</html>
