--- a/templates/login.html
+++ b/templates/login.html
@@ -16,14 +16,12 @@
 <div class="bg bg-opacity-50 min-h-screen flex flex-col items-center justify-center text-white">
     <!-- Additional text above the login box -->
     <div class="text-center mb-8 px-4">
-        <h1 class="text-2xl sm:text-4xl md:text-5xl lg:text-6xl font-bold tracking-tight text-900">
-            Automated Generation of News and Weather
+        <h1 class="text-2xl sm:text-4xl md:text-5xl lg:text 5xl font-bold tracking-tight text-600">
+          Automated Radio Personalities, Newscasters, and Weather Reporters
         </h1>
-        <p class="mt-4 text-lg sm:text-xl md:text-2xl lg:text-3xl leading-8 font-bold tracking-tight text-900">
-            AI bot for generation automated latest news and weather
-        </p>
+        <br/>
         <div class="relative rounded-full px-3 py-1 font-bold tracking-tight text-900 leading-6">
-            GroundRushLabs.
+           AI Bots By  GroundRushLabs.
         </div>
     </div>
 
