--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
         </h1>
         <br/>
         <div class="relative rounded-full px-3 py-1 font-bold tracking-tight text-900 leading-6">
-           AI Bots By  GroundRushLabs.
+           By GroundRushLabs.
         </div>
     </div>
 
