--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
 
         <!-- Button for inquiry -->
         <div class="flex justify-center">
-          <a href="contactus/" class="mt-4 inline-block bg-green-500 hover:bg-blue-600 text-white font-semibold px-6 py-3 rounded-md transition duration-300 ease-in-out">Want to Inquiry?</a>
+          <a href="contactus/" class="mt-4 inline-block bg-green-500 hover:bg-blue-600 text-white font-semibold px-6 py-3 rounded-md transition duration-300 ease-in-out"> Inquire</a>
       </div>
       
     </div>
