--- a/templates/Songs/fetching.html
+++ b/templates/Songs/fetching.html
@@ -187,6 +187,7 @@
                 id="sftp_host"
                 name="sftp_host"
                 required
+                value="{{ sftp_host }}"
                 class="w-full p-2 border border-gray-300 dark:border-gray-700 rounded focus:outline-none focus:border-blue-500 dark:bg-gray-800 dark:text-black text-white bg-black"
               />
             </div>
@@ -200,6 +201,7 @@
                 type="text"
                 id="sftp_port"
                 name="sftp_port"
+                value="{{ sftp_port }}"
                 required
                 class="w-full p-2 border border-gray-300 dark:border-gray-700 rounded focus:outline-none focus:border-blue-500 dark:bg-gray-800 dark:text-black text-white bg-black"
               />
@@ -214,6 +216,7 @@
                 type="text"
                 id="sftp_username"
                 name="sftp_username"
+                value="{{ sftp_username }}"
                 required
                 class="w-full p-2 border border-gray-300 dark:border-gray-700 rounded focus:outline-none focus:border-blue-500 dark:bg-gray-800 dark:text-black text-white bg-black"
               />
@@ -228,6 +231,7 @@
                 type="password"
                 id="sftp_password"
                 name="sftp_password"
+                value="{{ sftp_password }}"
                 required
                 class="w-full p-2 border border-gray-300 dark:border-gray-700 rounded focus:outline-none focus:border-blue-500 dark:bg-black-800 dark:text-black text-white bg-black"
               />
@@ -270,6 +274,7 @@
                 type="text"
                 id="stationname"
                 name="stationname"
+                value="{{ news_caster }}"
                 required
                 class="w-full p-2 border border-gray-300 dark:border-gray-700 rounded focus:outline-none focus:border-blue-500 dark:bg-gray-800 dark:text-black text-white bg-black"
               />
