--- a/templates/edit_newscaster.html
+++ b/templates/edit_newscaster.html
@@ -79,7 +79,7 @@
             <input type="text" id="sftp_password" name="sftp_password" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_password }}" required>
         </div>
         <div class="mb-4">
-          <label for="sftp_remote_path" class="block text-sm font-medium text-gray-700">Sftp Reote Path:</label>
+          <label for="sftp_remote_path" class="block text-sm font-medium text-gray-700">Sftp Remote Path:</label>
           <input type="text" id="sftp_remote_path" name="sftp_remote_path" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_remote_path }}" required>
       </div>
     
